--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <main class="container-fluid">
       <div class = "row">
           <div class="col-12 col-md-3 p-2 search-column">
-              <form class = "border p-2" id = "city-search-form">
-                  <h4>Search for a City</h2>
-                  <input id="city" type = "text" autofocus = "true" class = "form-input"/>
-                  <button class = "btn btn-primary" type = "submit">Search</button>
+              <form class = "border p-2" id ="city-search-form">
+                  <h4>Search for a City:</h2>
+                  <input id="city" type = "text" autofocus = "true" placeholder="Boston, MA" class ="form-input"/><br>
+                  <button class = "btn btn-success mt-2 type = submit">Search</button>
               </form>
               <div class = "past-search border" id = "past-search-buttons"></div>
           </div>
