saving progress in JS

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <form class = "border p-2" id ="city-search-form">
                   <h4>Search for a City:</h2>
                   <input id="city" type = "text" autofocus = "true" placeholder="Boston, MA" class ="form-input"/><br>
-                  <button class = "btn btn-success mt-2 type = submit">Search</button>
+                  <button class = "btn btn-success mt-2 type = submit" id="button">Search</button>
               </form>
               <div class = "past-search border" id = "past-search-buttons"></div>
           </div>
@@ -39,6 +39,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-  <script src="./assets/js/script.js"></script>
+  <script src="src/app.js"></script>
 </body>
 </html>
