--- a/src/develop/index.html
+++ b/src/develop/index.html
@@ -4,23 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <title>Weather Dashboard</title>
 </head>
 <body>
   <header class = "bg-dark text-white text-center p-2">
-      <h1>Weather Dashboard</h1>
+      <h1>Weather Dashboard: Take 2</h1>
   </header>
   <main class="container-fluid">
       <div class = "row">
           <div class="col-12 col-md-3 p-2 search-column">
               <form class = "border p-2" id ="city-search-form">
-                  <h4>Search for a City:</h2>
-                  <input id="city" type = "text" autofocus = "true" placeholder="Boston, MA" class ="form-input"/><br>
-                  <button class = "btn btn-success mt-2 type = submit" id="button">Search</button>
+                  <h2>Search for a City:</h2>
+                  <input id="city" type="text" autofocus = "true" placeholder="Boston, MA" class ="form-input"/><br>
+                  <button class = "btn btn-success mt-2" type="submit" id="button">Search</button>
+                  <!-- when this button is clicked it calls the function that takes the input and plugs in into an api call -->
               </form>
-              <div class = "past-search border" id = "past-search-buttons"></div>
+              <div class = "past-search border" id = "past-search-buttons">
+                <h4 class="p-2">Past Searches</h4>
+              </div>
           </div>
           <div class="col-12 col-md-9">
               <div class = "row border selected-city" id = "current-forecast">
@@ -36,9 +39,9 @@
           </div>
       </div>
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-  <script src="src/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
