working on aesthetic

--- a/src/develop/index.html
+++ b/src/develop/index.html
@@ -28,7 +28,7 @@
 
         <div class="col-md-10">
             <div class="mx-4 my-4">
-                <div class="card currentCard py-1">
+                <div class="card currentCard py-1" id="currentCard">
                     <h5 class="card-title mt-2 text-center" id="currentCity">Current Forecast:</h5>
                     <div id="current" class="d-flex flex-row">
                         <div class="card text-white bg-primary mb-3 mx-1 crdCurrent" id="crdCurrent">
