light updates to syntax

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="mx-4 my-4">
                 <div class="card currentCard py-1" id="currentCard">
                     <h5 class="card-title mt-2 text-center" id="currentCity">Current Forecast:</h5>
-                    <div id="current" class="d-flex flex-row">
+                    <div id="current" class="d-flex flex-row justify-content-center">
                         <div class="card text-white bg-primary mb-3 mx-1 crdCurrent" id="crdCurrent">
                             <div class="card-body">
                                 <h2 id="currentTitle" class="card-title">Sun</h2>
@@ -49,11 +49,11 @@
             <div class="mt-4">
                 <div class="row"></div>
                 <div class="card pb-5 fiveDayCard pl-5">
-                    <h5 class="card-title mt-2 mr-5" id="weatherTitle">5-Day Forecast</h5>
-                    <div id="weekly" class="d-flex flex-row">
+                    <h5 class="card-title text-center mt-2 mr-5" id="weatherTitle">5-Day Forecast</h5>
+                    <div id="weekly" class="d-flex flex-row justify-content-center">
                         <div class="card bg-primary mb-3 mx-1 crdWeekly">
                             <div class="card-body text-white">
-                                <h5 id="day1Title" class="card-title">Sunday</h5>
+                                <h5 id="day1Title" class="card-title"></h5>
                                 <img id="day1Icon" src="http://openweathermap.org/img/wn/10d.png" alt="Weather Icon" />
                                 <p id="day1Desc" class="card-text">Hi Lo Temp</p>
                             </div>
@@ -61,7 +61,7 @@
 
                         <div class="card bg-primary mb-3 mx-1 crdWeekly">
                             <div class="card-body text-white">
-                                <h5 id="day2Title" class="card-title">Monday</h5>
+                                <h5 id="day2Title" class="card-title"></h5>
                                 <img id="day2Icon" src="http://openweathermap.org/img/wn/10d.png" alt="Weather Icon" />
                                 <p id="day2Desc" class="card-text"> Hi Lo Temp</p>
                             </div>
@@ -69,7 +69,7 @@
 
                         <div class="card bg-primary mb-3 mx-1 crdWeekly">
                             <div class="card-body text-white">
-                                <h5 id="day3Title" class="card-title">Tuesday</h5>
+                                <h5 id="day3Title" class="card-title"></h5>
                                 <img id="day3Icon" src="http://openweathermap.org/img/wn/10d.png" alt="Weather Icon" />
                                 <p id="day3Desc" class="card-text"> Hi Lo Temp</p>
                             </div>
@@ -77,7 +77,7 @@
 
                         <div class="card bg-primary mb-3 mx-1 crdWeekly">
                             <div class="card-body text-white">
-                                <h5 id="day4Title" class="card-title">Wednesday</h5>
+                                <h5 id="day4Title" class="card-title"></h5>
                                 <img id="day4Icon" src="http://openweathermap.org/img/wn/10d.png" alt="Weather Icon" />
                                 <p id="day4Desc" class="card-text"> Hi Lo Temp</p>
                             </div>
@@ -85,7 +85,7 @@
 
                         <div class="card bg-primary mb-3 mx-1 crdWeekly">
                             <div class="card-body text-white">
-                                <h5 id="day5Title" class="card-title">Thursday</h5>
+                                <h5 id="day5Title" class="card-title"></h5>
                                 <img id="day5Icon" src="http://openweathermap.org/img/wn/10d.png" alt="Weather Icon" />
                                 <p id="day5Desc" class="card-text"> Hi Lo Temp</p>
                             </div>
